bin/testsuite/tests/compiler/src/errors/compiler3950.swg
#global testerror "Err0341"

enum OT: string
{
    A = "1"
    B = "2"
}

//#[Swag.PrintBc]
#test
{
    var pt: OT
}
